--- a/input.html
+++ b/input.html
@@ -14,9 +14,11 @@
     </header>
     <div class="metric-form-wrap">
       <div class="input-row metric-form" data-index="0">
+        <h3 class="metric-block-title">Metric 1</h3>
+        <label class="option-check option-show-main"><input type="checkbox" name="showOnMainScreen" aria-label="Show on main screen" /> Show on main screen</label>
         <div class="form-block">
-          <label class="form-label" for="metric-heading">Metric name</label>
-          <textarea id="metric-heading" name="heading" placeholder="Metric name" rows="2" aria-label="Metric name"></textarea>
+          <label class="form-label">What are we measuring?</label>
+          <textarea name="heading" placeholder="What are we measuring?" rows="2" aria-label="What are we measuring?"></textarea>
         </div>
         <div class="form-block goal-current-block">
           <label class="form-label">Goal + Current</label>
@@ -35,12 +37,84 @@
           </div>
         </div>
       </div>
+      <div class="input-row metric-form" data-index="1">
+        <h3 class="metric-block-title">Metric 2</h3>
+        <label class="option-check option-show-main"><input type="checkbox" name="showOnMainScreen" aria-label="Show on main screen" /> Show on main screen</label>
+        <div class="form-block">
+          <label class="form-label">What are we measuring?</label>
+          <textarea name="heading" placeholder="What are we measuring?" rows="2" aria-label="What are we measuring?"></textarea>
+        </div>
+        <div class="form-block goal-current-block">
+          <label class="form-label">Goal + Current</label>
+          <div class="goal-current-fields">
+            <textarea name="goal" placeholder="Goal" rows="2" aria-label="Goal"></textarea>
+            <textarea name="current" placeholder="Current" rows="2" aria-label="Current"></textarea>
+          </div>
+        </div>
+        <div class="form-block options-block">
+          <label class="form-label">Options</label>
+          <div class="options-row">
+            <label class="option-check"><input type="checkbox" name="displayAsPercent" aria-label="Display as percentage" /> Display as %?</label>
+            <span class="show-as-label">Show as</span>
+            <label class="option-radio"><input type="radio" name="displayAs_1" value="summary" /> Summary</label>
+            <label class="option-radio"><input type="radio" name="displayAs_1" value="ranking" /> Ranking</label>
+          </div>
+        </div>
+      </div>
+      <div class="input-row metric-form" data-index="2">
+        <h3 class="metric-block-title">Metric 3</h3>
+        <label class="option-check option-show-main"><input type="checkbox" name="showOnMainScreen" aria-label="Show on main screen" /> Show on main screen</label>
+        <div class="form-block">
+          <label class="form-label">What are we measuring?</label>
+          <textarea name="heading" placeholder="What are we measuring?" rows="2" aria-label="What are we measuring?"></textarea>
+        </div>
+        <div class="form-block goal-current-block">
+          <label class="form-label">Goal + Current</label>
+          <div class="goal-current-fields">
+            <textarea name="goal" placeholder="Goal" rows="2" aria-label="Goal"></textarea>
+            <textarea name="current" placeholder="Current" rows="2" aria-label="Current"></textarea>
+          </div>
+        </div>
+        <div class="form-block options-block">
+          <label class="form-label">Options</label>
+          <div class="options-row">
+            <label class="option-check"><input type="checkbox" name="displayAsPercent" aria-label="Display as percentage" /> Display as %?</label>
+            <span class="show-as-label">Show as</span>
+            <label class="option-radio"><input type="radio" name="displayAs_2" value="summary" /> Summary</label>
+            <label class="option-radio"><input type="radio" name="displayAs_2" value="ranking" /> Ranking</label>
+          </div>
+        </div>
+      </div>
+      <div class="input-row metric-form" data-index="3">
+        <h3 class="metric-block-title">Metric 4</h3>
+        <label class="option-check option-show-main"><input type="checkbox" name="showOnMainScreen" aria-label="Show on main screen" /> Show on main screen</label>
+        <div class="form-block">
+          <label class="form-label">What are we measuring?</label>
+          <textarea name="heading" placeholder="What are we measuring?" rows="2" aria-label="What are we measuring?"></textarea>
+        </div>
+        <div class="form-block goal-current-block">
+          <label class="form-label">Goal + Current</label>
+          <div class="goal-current-fields">
+            <textarea name="goal" placeholder="Goal" rows="2" aria-label="Goal"></textarea>
+            <textarea name="current" placeholder="Current" rows="2" aria-label="Current"></textarea>
+          </div>
+        </div>
+        <div class="form-block options-block">
+          <label class="form-label">Options</label>
+          <div class="options-row">
+            <label class="option-check"><input type="checkbox" name="displayAsPercent" aria-label="Display as percentage" /> Display as %?</label>
+            <span class="show-as-label">Show as</span>
+            <label class="option-radio"><input type="radio" name="displayAs_3" value="summary" /> Summary</label>
+            <label class="option-radio"><input type="radio" name="displayAs_3" value="ranking" /> Ranking</label>
+          </div>
+        </div>
+      </div>
     </div>
-    <p class="input-hint">Choose "Summary" (card with current/goal) or "Ranking" (totals from table below plus sorted list). When Ranking is selected, Goal and Current are calculated from the table. When Current &ge; Goal, the card turns green.</p>
+    <p class="input-hint">Tick "Show on main screen" to display that metric on the results page. Choose "Summary" or "Ranking" (totals from table below). When Current &ge; Goal, the card turns green.</p>
 
     <section class="ranking-section" aria-labelledby="ranking-heading">
       <h2 id="ranking-heading" class="ranking-heading">Ranking data</h2>
-      <p class="ranking-hint">When the metric is set to "Ranking" above, this table is used. Tick to show the table and enter names with goals and current values.</p>
+      <p class="ranking-hint">When a metric is set to "Ranking" above, this table is used. Tick Ranking to show the table and enter names with goals and current values.</p>
       <div class="ranking-toggles">
         <label class="toggle-row"><input type="checkbox" id="rankingEnabled" /> Ranking</label>
         <label class="toggle-row"><input type="checkbox" id="rankingDisplayAsPercent" /> Display as %?</label>
@@ -67,7 +141,7 @@
   <script>
     (function () {
       var KEY = 'metricsDashboard';
-      var INITIAL_RANKING_ROWS = 10;
+      var INITIAL_RANKING_ROWS = 4;
 
       function getData() {
         var raw;
@@ -77,9 +151,9 @@
           try {
             var parsed = JSON.parse(raw);
             if (Array.isArray(parsed)) {
-              data.metrics = parsed.length ? [parsed[0]] : [];
+              data.metrics = parsed.slice(0, 4);
             } else if (parsed && parsed.metrics) {
-              data.metrics = parsed.metrics.length ? [parsed.metrics[0]] : [];
+              data.metrics = (parsed.metrics || []).slice(0, 4);
               if (parsed.ranking) {
                 data.ranking.enabled = !!parsed.ranking.enabled;
                 data.ranking.displayAsPercent = !!parsed.ranking.displayAsPercent;
@@ -88,22 +162,26 @@
             }
           } catch (e) {}
         }
+        while (data.metrics.length < 4) data.metrics.push({});
         return data;
       }
 
       function load() {
         var data = getData();
-        var row = document.querySelector('.input-row');
-        if (!row) return;
-        var m = data.metrics[0] || {};
-        row.querySelector('textarea[name="heading"]').value = m.heading || '';
-        row.querySelector('textarea[name="goal"]').value = m.goal !== undefined && m.goal !== null ? String(m.goal) : '';
-        row.querySelector('textarea[name="current"]').value = m.current !== undefined && m.current !== null ? String(m.current) : '';
-        row.querySelector('input[name="displayAsPercent"]').checked = !!m.displayAsPercent;
-        var displayAs = (m.displayAs === 'ranking') ? 'ranking' : 'summary';
-        var radio = row.querySelector('input[name="displayAs_0"][value="' + displayAs + '"]');
-        if (radio) radio.checked = true;
-        updateSummaryInputsState();
+        var rows = document.querySelectorAll('.input-row.metric-form');
+        for (var i = 0; i < rows.length && i < 4; i++) {
+          var row = rows[i];
+          var m = data.metrics[i] || {};
+          row.querySelector('input[name="showOnMainScreen"]').checked = !!m.showOnMainScreen;
+          row.querySelector('textarea[name="heading"]').value = m.heading || '';
+          row.querySelector('textarea[name="goal"]').value = m.goal !== undefined && m.goal !== null ? String(m.goal) : '';
+          row.querySelector('textarea[name="current"]').value = m.current !== undefined && m.current !== null ? String(m.current) : '';
+          row.querySelector('input[name="displayAsPercent"]').checked = !!m.displayAsPercent;
+          var displayAs = (m.displayAs === 'ranking') ? 'ranking' : 'summary';
+          var radio = row.querySelector('input[name="displayAs_' + i + '"][value="' + displayAs + '"]');
+          if (radio) radio.checked = true;
+        }
+        updateAllSummaryInputsState();
 
         document.getElementById('rankingEnabled').checked = data.ranking.enabled;
         document.getElementById('rankingDisplayAsPercent').checked = data.ranking.displayAsPercent;
@@ -117,16 +195,20 @@
         renderRankingRows(rankingRows);
       }
 
-      function updateSummaryInputsState() {
-        var row = document.querySelector('.input-row');
+      function updateSummaryInputsState(row) {
         if (!row) return;
-        var isRanking = (row.querySelector('input[name="displayAs_0"]:checked') || {}).value === 'ranking';
+        var idx = row.getAttribute('data-index');
+        var isRanking = (row.querySelector('input[name="displayAs_' + idx + '"]:checked') || {}).value === 'ranking';
         var goalInput = row.querySelector('textarea[name="goal"]');
         var currentInput = row.querySelector('textarea[name="current"]');
         goalInput.disabled = isRanking;
         currentInput.disabled = isRanking;
         goalInput.placeholder = isRanking ? 'From table' : 'Goal';
         currentInput.placeholder = isRanking ? 'From table' : 'Current';
+      }
+
+      function updateAllSummaryInputsState() {
+        document.querySelectorAll('.input-row.metric-form').forEach(updateSummaryInputsState);
       }
 
       function renderRankingRows(rowsData) {
@@ -172,12 +254,14 @@
       }
 
       function save() {
-        var row = document.querySelector('.input-row');
         var metrics = [];
-        if (row) {
-          var displayAsRadio = row.querySelector('input[name="displayAs_0"]:checked');
+        var rows = document.querySelectorAll('.input-row.metric-form');
+        for (var i = 0; i < rows.length && i < 4; i++) {
+          var row = rows[i];
+          var displayAsRadio = row.querySelector('input[name="displayAs_' + i + '"]:checked');
           var displayAs = (displayAsRadio && displayAsRadio.value === 'ranking') ? 'ranking' : 'summary';
           metrics.push({
+            showOnMainScreen: row.querySelector('input[name="showOnMainScreen"]').checked,
             heading: row.querySelector('textarea[name="heading"]').value.trim(),
             goal: row.querySelector('textarea[name="goal"]').value.trim(),
             current: row.querySelector('textarea[name="current"]').value.trim(),
@@ -201,13 +285,16 @@
       });
       document.getElementById('rankingDisplayAsPercent').addEventListener('change', save);
 
-      var displayAsRadios = document.querySelectorAll('input[name="displayAs_0"]');
-      for (var r = 0; r < displayAsRadios.length; r++) {
-        displayAsRadios[r].addEventListener('change', function () {
-          updateSummaryInputsState();
-          save();
-        });
-      }
+      document.querySelectorAll('.input-row.metric-form').forEach(function (row) {
+        var idx = row.getAttribute('data-index');
+        var radios = row.querySelectorAll('input[name="displayAs_' + idx + '"]');
+        for (var r = 0; r < radios.length; r++) {
+          radios[r].addEventListener('change', function () {
+            updateAllSummaryInputsState();
+            save();
+          });
+        }
+      });
 
       document.getElementById('addRankingRow').addEventListener('click', function () {
         var data = getRankingRowsData();
